Ajuste de estrutura e configuração

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,12 @@
+server:
+  port: 8084
+
 spring:
+  application:
+    name: phone-service
   jpa:
+    hibernate:
+      ddl-auto: update
     show-sql: true
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
@@ -9,17 +16,12 @@ spring:
       connection-timeout: 10000
       maximum-pool-size: 5
       schema: samaia
-  application:
-    name: phone-service
-
-server:
-  servlet:
-    context-path: /api
-  port: 8083
 
 eureka:
   client:
     service-url:
-      defaul-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+      defaul-zone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
   instance:
-    prefer-ip-address: true
+    hostname: localhost
